--- a/ANZ Gameday Resources/Producers/client.properties
+++ b/ANZ Gameday Resources/Producers/client.properties
@@ -6,5 +6,5 @@ sasl.username=<Confluent cloud API Key>
 sasl.password=<Confluent cloud API secret>
 
 # Schema Registry Configuration
-schema.registry.url="<schema registry URL>"
-schema.registry.password="<schema registry API secret>"
+schema.registry.url=<schema registry URL>
+schema.registry.basic.auth.user.info=<Schema registry API key> : <schema registry API Secret>
